# GPUdemo

./: .gitignore  README.md  add  add.cpp  add.cu  add_cu  add_cu_res.csv  compile_cuda.bat  gpu_monitor.py  ncu_commands.txt  ncua.sh  performance_test  performance_test.cu  vector_add  vector_add.cu
BLAS/: CMakeLists.txt  L_NT_RR_C.csv  L_NT_RR_C_id_2.csv  L_NT_RR_R_id_6.csv  L_NT_RR_R_small_M.csv  L_TN_CC_C.csv  L_TN_CC_R.csv  Makefile  R_NT_RR_C.csv  R_NT_RR_C_fast.csv  R_NT_RR_C_smallM_100time.csv  R_NT_RR_C_small_M.csv  R_NT_RR_R_slow.csv  R_TN_CC_C.csv  R_TN_CC_R.csv  cuBLAS.cu  cuBLAS_L_TN_fp16_100time.csv  cuBLAS_L_TN_int8_100time.csv  cuBLAS_L_TN_int8_smallM_100times.csv  cuBLAS_L_search_all.cu  cuBLAS_L_search_all_fp16  cuBLAS_L_search_all_int8  cuBLAS_R_TN_fp16_100time.csv  cuBLAS_R_TN_int8_100time.csv  cuBLAS_R_TN_int8_smallM_100time.csv  cuBLAS_R_search_all.cu  cuBLAS_R_search_all_fp16  cuBLAS_R_search_all_int8  cuBLAS_TN_fp16.csv  cuBLAS_TN_int8.csv  cuBLAS_TN_int8_small_M.csv  cuBLAS_search_all.cu  cuBLAS_search_all_fp16  cuBLAS_search_all_int8  detail_res_t2int8.nsys-rep  detail_res_t2int8.sqlite  detail_res_t2sp.nsys-rep  detail_res_t2sp.sqlite  detail_res_t2spk.sqlite  matmul_example.cpp  (+39 more)
GEMM/imma_perf_test/: CMakeLists.txt  imma.cu  imma_perf_results.csv  imma_perf_test  imma_perf_test.cu  performance_summary.csv  plot_performance.py  test_results.txt
SPARSE/: L_NT_RR_R_smallM.csv  W_left_A_right_all  W_left_A_right_all.cu  W_left_A_right_compat  W_left_A_right_compat.cu  alg_weight_compat  alg_weight_compat.cu  alg_weight_compat_NT_RR_C  (+12 more)
(+141 files in other folders)
